# B-adorers

./: CMakeLists.txt  README.md  badorers.cc  badorers.h  badorers_seq.cpp  blimit.cpp  blimit.hpp
data/: graf.txt  graf2.txt  graf3v.txt  graf4v.txt  wzorce.txt
